force-app/main/default/objects/JMS_ZipCodes__c/JMS_ZipCodes__c.object-meta.xml
<CustomObject>
    <description>It will Store all the Zip COdes with Territory Details.</description>
    <label>ZipCodes</label>
    <nameField>
        <displayFormat>ZC-{00000}</displayFormat>
        <label>ZipCode Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZipCodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>