force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_City_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_City_Name__c</fullName>
    <description>It will store City Name of a ZipCode.</description>
    <label>City Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>