force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_Director__c.field-meta.xml
<CustomField>
    <fullName>JMS_Director__c</fullName>
    <description>It will store Director Name of a Zipcode.</description>
    <label>Director</label>
    <length>240</length>
    <type>Text</type>
</CustomField>