force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_Division__c.field-meta.xml
<CustomField>
    <fullName>JMS_Division__c</fullName>
    <description>It will store Division Name of a Zipcode.</description>
    <label>Division</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>