force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>JMS_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will check that the zipcode is Active or not.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>