force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_Market_Center_above_segment__c.field-meta.xml
<CustomField>
    <fullName>JMS_Market_Center_above_segment__c</fullName>
    <description>It will store Market Center above segment Name of a Zipcode.</description>
    <label>Market Center above segment</label>
    <length>240</length>
    <type>Text</type>
</CustomField>