force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_Region_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_Region_ID__c</fullName>
    <description>It will store Region ID of a Zipcode.</description>
    <label>Region ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>