force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_RSM_Email__c.field-meta.xml
<CustomField>
    <fullName>JMS_RSM_Email__c</fullName>
    <description>It will store RSM Email of a Zipcode.</description>
    <label>RSM Email</label>
    <type>Email</type>
</CustomField>