force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_RSM_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_RSM_Name__c</fullName>
    <label>RSM Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>