force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_Segment__c.field-meta.xml
<CustomField>
    <fullName>JMS_Segment__c</fullName>
    <description>It will store Segment Name of a Zipcode.</description>
    <label>Segment</label>
    <length>240</length>
    <type>Text</type>
</CustomField>