force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_Segment_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_Segment_ID__c</fullName>
    <description>It will store Segment ID of a Zipcode.</description>
    <label>Segment ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>