force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_State_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_State_Name__c</fullName>
    <description>It will store State Name of a Zipcode.</description>
    <label>State Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>