force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Territory_Name__c</fullName>
    <description>Will store Territory Name against ZipCodes.</description>
    <label>Territory Name</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>