force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_TSM_Email__c.field-meta.xml
<CustomField>
    <fullName>JMS_TSM_Email__c</fullName>
    <description>It will store TSM Email of a Zipcode.</description>
    <label>TSM Email</label>
    <type>Email</type>
</CustomField>