force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_TSM_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_TSM_Name__c</fullName>
    <description>It will store TSM Name of a Zipcode.</description>
    <label>TSM Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>