force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_TSM_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_TSM_Territory_ID__c</fullName>
    <description>It will store TSM Territory ID of a Zipcode.</description>
    <label>TSM Territory ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>