force-app/main/default/objects/JMS_ZipCodes__c/fields/JMS_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>JMS_Zip_Code__c</fullName>
    <description>It will store Zipcodes.</description>
    <label>ZipCode</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>