force-app/main/default/objects/JMS_ZipCodes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JMS_Zip_Code__c</columns>
    <columns>JMS_State_Name__c</columns>
    <columns>JMS_TSM_Name__c</columns>
    <columns>JMS_TSM_Territory_ID__c</columns>
    <columns>JMS_Territory_Name__c</columns>
    <columns>JMS_RSM_Name__c</columns>
    <columns>JMS_Director__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>JMS_Zip_Code__c</field>
        <operation>contains</operation>
    </filters>
    <filters>
        <field>JMS_TSM_Name__c</field>
        <operation>contains</operation>
    </filters>
    <label>All</label>
</ListView>